# investment-opportunity-radar

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  GEMINI.md  README.md  alembic.ini  check_tasks.py  docker-compose.yml  pyproject.toml  test_daily_report.py  交接文档-剩余任务.md
.agent/: instructions.md
docs/: 优化方案-数据源切换与Web重构.md  开发工作流.md
docs/adr/: 0001-dingtalk-first-web-as-admin.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/todo/: 1.图片显示不出来.md
docs/使用文档/: 00-目录索引.md  01-项目概述.md  02-目录结构.md  03-功能代码映射.md  04-数据库设计.md  05-配置说明.md  06-部署架构.md  07-开发指南.md
docs/设计文档/: 0.使用 10 份文档的工作流 + TODO.md  1.机会雷达（Investment Opportunity Radar）需求规格说明书（SRS:PRD）.md  10.测试与验收文档.md  2.机会雷达（Investment Opportunity Radar）概要设计文档（HLD）.md  3.详细设计文档（LLD）.md  4.接口设计文档（API Spec）.md  5.数据库设计文档（DB Schema : ERD）.md  6.Prompt 与输出 JSON Schema 文档.md  7.UI交互设计说明（Web 界面）.md  8.部署与运维文档.md  9.任务编排与核心流程技术文档.md  页面设计文档.md
docs/设计文档/sql的详细文档/: SQL_API.md  SQL_QA.md
src/: manage.py
src/alembic/: env.py
src/alembic/versions/: 001_initial_tables.py  002_opportunity_track.py  003_prompt_split_action_status.py  004_content_item_source_category.py  005_analysis_prompt_version_nullable.py
src/app/: __init__.py  config.py  database.py  logging_config.py  main.py
src/app/clients/: deepseek.py  dingtalk.py  feishu.py  jtks.py  werss.py
src/app/core/: prompts.py  security.py
tests/: conftest.py  test_analyze_article.py  test_daily_report.py  test_feishu_push.py  test_push_decision.py  test_routes.py  test_slot_resilience.py  test_source_category.py
(+27 files in other folders)
